# level4-project

./: .gitignore  CMakeLists.txt  Dockerfile  MANUAL.md  README.md  bots-eval.sh  build.sh  clean.sh  compile_ir.sh  docker-compose.yml  eval.sh  generate_graphs.sh  instruction_decoder.py  strideeval.py
data/: readme.md
docs/: Alias Analysis Class in LLVM.md  Alias Analysis.md  Clobber.md  Code References.md  Constant Folding.md  Data Flow Analysis.md  Dependence.md  Finding Your Way Around the LLVM Dependence.md  Fine-grained Parallelism.md  Hazard.md  HubSpot.md  LLVM MemorySSA.md  MemorySSA.md  Optimising Compilers for Modern Architectures.md  Pass Styles.md  Pipeline Stalls.md  Pipelining.md  Plan.md  SCC.md  SCCDAG.md  SSA.md  Superscalar.md  background.md  commands.md  glossary.md  minutes.md  plan-old.md  plan.md
docs/data/: readme.md
docs/dissertation/: l4proj.tex
docs/minutes/: Meeting 7.md  meeting 1.md  meeting 10.md  meeting 11.md  meeting 12.md  meeting 13.md  meeting 14.md  meeting 2.md  meeting 3.md  meeting 4.md  meeting 5.md  meeting 6.md  meeting 7.md  meeting 8.md  meeting 9.md  template.md
docs/notes/: 10-11-2025.md  24-01-2026.md  25-01-2026.md  Jacobian.md  commands.md
llvm14/: CMakeLists.txt  Dockerfile
llvm14/src/: example1.cpp  main.cpp
llvm14/tests/: test2.cpp
llvm20/: CMakeLists.txt  Dockerfile
llvm20/src/: main.cpp
llvm20/tests/: test1.cpp  test1.ll  test2.ll
src/: exampledependency.cpp  examples2.cpp  loopdependence.cpp  main.cpp  niceprint.cpp  prinedeps.cpp
tests/: aliasing.cpp  jacobian-1d.cpp  loop.cpp  loopiterationdepdencen.cpp  overlapping.cpp  task.cpp  test1.ll  test2.cpp
